fixed spacing issue by adding "circles" id

--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-/*body {
-	background-color: #0000FF;
-	width: 500px;
-	margin-left: auto;
-	margin-right: auto;
-	font-family: 'Trykker', serif;
-	color: #FEFCFF;
-	}
-*/
-
 body {
 	background-color: #808080;
 	font-family: 'Trykker', serif;
@@ -56,6 +46,13 @@ h1 {
 	padding: 10px;
 	}
 
+#circles {
+	width: 500px;
+	height: 138px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	}
+
 .circle {
 	float: left;
 	position:relative;
@@ -68,6 +65,7 @@ h1 {
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
 	text-align: center;
+	vertical-align: middle;
 	}
 
 .circletext {
@@ -94,6 +92,7 @@ h1 {
 	background-position: 0px 0px;
 	text-align: center;
 	background-image: url(/images/heart.png); 
+	vertical-align: middle;
 	}
 
 .hearttext {
